# GCR-CIR-Modulation

./: README.md  configure.ac
common/: mpi_config.hh  print_warn.hh
generate_CIR/: README.md
runs/: Makefile.am  main_plot_background_batl.py  main_test_background_batl.cc  main_test_fieldline_batl.cc  main_test_integrate_spectra_one_rotation.cc  main_test_process_spectrum.cc  main_test_process_time.cc  main_test_simulation_batl.cc  plot_fit_spectrum_5au.py
src/: background_server.cc  block_base.cc  block_batl.hh  distribution_other.hh  server_base.hh  server_batl.cc  server_cartesian.cc  server_cartesian.hh  spectrum_interface.f90
